crates/iam-graph/tests/snapshots/json_schema_tests__associated_entity_json_shape.snap
---
source: crates/iam-graph/tests/json_schema_tests.rs
expression: value
---
{
  "arn": "arn:aws:iam::123456789012:role/Example",
  "name": "Example",
  "entity_type": "Role",
  "relationship": "CAN_ASSUME"
}
