crates/iam-graph/tests/snapshots/json_schema_tests__org_escalation_path_json_shape.snap
---
source: crates/iam-graph/tests/json_schema_tests.rs
expression: value
---
{
  "arn": "arn:aws:iam::123456789012:user/Attacker",
  "name": "Attacker",
  "entity_type": "User",
  "account_id": "123456789012",
  "risky_actions": [
    "sts:AssumeRole"
  ],
  "matched_paths": [
    "assume-role"
  ],
  "path": [
    {
      "arn": "arn:aws:iam::210987654321:role/Victim",
      "entity_type": "Role",
      "account_id": "210987654321",
      "snapshot_id": "20260101T000000Z"
    }
  ],
  "conditional": true,
  "holders": [
    {
      "arn": "arn:aws:iam::210987654321:user/Member",
      "name": "Member",
      "entity_type": "User",
      "attributes": {
        "user_id": "AIDAEXAMPLEMEMBER",
        "has_mfa": true,
        "mfa_method": "virtual",
        "console_login_enabled": true,
        "password_last_used": "2026-01-10T00:00:00+00:00",
        "last_activity_date": "2026-01-10T00:00:00+00:00",
        "create_date": "2024-06-01T00:00:00+00:00",
        "access_key_count": 0,
        "active_access_key_count": 0,
        "access_key_ids": []
      }
    }
  ],
  "instance_profiles": [],
  "trust_principals": [],
  "user_attributes": {
    "user_id": "AIDAEXAMPLEATTACKER",
    "has_mfa": false,
    "console_login_enabled": false,
    "last_activity_date": "2026-01-20T00:00:00+00:00",
    "create_date": "2025-03-01T00:00:00+00:00",
    "access_key_count": 1,
    "active_access_key_count": 1,
    "oldest_active_key_date": "2025-03-01T00:00:00+00:00",
    "access_key_ids": [
      "AKIAEXAMPLE3"
    ]
  },
  "associations": [
    {
      "arn": "arn:aws:iam::210987654321:role/Victim",
      "name": "Victim",
      "entity_type": "Role",
      "relationship": "CAN_ASSUME_ROLE",
      "conditional": true
    }
  ]
}
