crates/iam-graph/tests/snapshots/json_schema_tests__permission_diff_json_shape.snap
---
source: crates/iam-graph/tests/json_schema_tests.rs
expression: value
---
{
  "added": [
    {
      "action": "s3:PutObject",
      "resource": "arn:aws:s3:::example-bucket/*",
      "effect": "Allow"
    }
  ],
  "removed": [
    {
      "action": "s3:DeleteObject",
      "resource": "arn:aws:s3:::example-bucket/*",
      "effect": "Allow"
    }
  ]
}
