crates/iam-graph/tests/snapshots/json_schema_tests__permission_row_json_shape.snap
---
source: crates/iam-graph/tests/json_schema_tests.rs
expression: value
---
{
  "action": "s3:GetObject",
  "effect": "Allow",
  "resource": "arn:aws:s3:::example-bucket/*",
  "effective": true
}
