crates/iam-graph/tests/snapshots/json_schema_tests__snapshot_record_json_shape.snap
---
source: crates/iam-graph/tests/json_schema_tests.rs
expression: value
---
{
  "id": "20260101T000000Z",
  "account_id": "123456789012",
  "collected_at": "2026-01-01T00:00:00Z",
  "is_partial": true,
  "partial_reasons": [
    "some wildcards not expanded"
  ],
  "org_collection_run_id": "org-run-001"
}
